sixth/compilers/compilador/compilador.output
Terminals unused in grammar

    ATRIBUICAO
    LABEL
    TYPE
    ARRAY
    OF
    PROCEDURE
    FUNCTION
    GOTO
    IF
    THEN
    ELSE
    WHILE
    DO
    OR
    DIV
    AND


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: ε

    4 $@3: ε

    5 bloco: $@2 parte_declara_vars $@3 comando_composto

    6 parte_declara_vars: var

    7 $@4: ε

    8 var: $@4 VAR declara_vars
    9    | ε

   10 declara_vars: declara_vars declara_var
   11             | declara_var

   12 $@5: ε

   13 $@6: ε

   14 declara_var: $@5 lista_id_var DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA

   15 tipo: IDENT

   16 lista_id_var: lista_id_var VIRGULA IDENT
   17             | IDENT

   18 lista_idents: lista_idents VIRGULA IDENT
   19             | IDENT

   20 comando_composto: T_BEGIN comandos T_END

   21 comandos: ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2
    FECHA_PARENTESES (260) 2
    VIRGULA (261) 16 18
    PONTO_E_VIRGULA (262) 2 14
    DOIS_PONTOS (263) 14
    PONTO (264) 2
    T_BEGIN (265) 20
    T_END (266) 20
    VAR (267) 8
    IDENT (268) 2 15 16 17 18 19
    ATRIBUICAO (269)
    LABEL (270)
    TYPE (271)
    ARRAY (272)
    OF (273)
    PROCEDURE (274)
    FUNCTION (275)
    GOTO (276)
    IF (277)
    THEN (278)
    ELSE (279)
    WHILE (280)
    DO (281)
    OR (282)
    DIV (283)
    AND (284)


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    programa (31)
        on left: 2
        on right: 0
    $@1 (32)
        on left: 1
        on right: 2
    bloco (33)
        on left: 5
        on right: 2
    $@2 (34)
        on left: 3
        on right: 5
    $@3 (35)
        on left: 4
        on right: 5
    parte_declara_vars (36)
        on left: 6
        on right: 5
    var (37)
        on left: 8 9
        on right: 6
    $@4 (38)
        on left: 7
        on right: 8
    declara_vars (39)
        on left: 10 11
        on right: 8 10
    declara_var (40)
        on left: 14
        on right: 10 11
    $@5 (41)
        on left: 12
        on right: 14
    $@6 (42)
        on left: 13
        on right: 14
    tipo (43)
        on left: 15
        on right: 14
    lista_id_var (44)
        on left: 16 17
        on right: 14 16
    lista_idents (45)
        on left: 18 19
        on right: 2 18
    comando_composto (46)
        on left: 20
        on right: 5
    comandos (47)
        on left: 21
        on right: 20


State 0

    0 $accept: • programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 • PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    2 programa: $@1 PROGRAM • IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT • ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES • lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8


State 7

   19 lista_idents: IDENT •

    $default  reduce using rule 19 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   18 lista_idents: lista_idents • VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 9
    VIRGULA           shift, and go to state 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 11


State 10

   18 lista_idents: lista_idents VIRGULA • IDENT

    IDENT  shift, and go to state 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    $default  reduce using rule 3 ($@2)

    bloco  go to state 13
    $@2    go to state 14


State 12

   18 lista_idents: lista_idents VIRGULA IDENT •

    $default  reduce using rule 18 (lista_idents)


State 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  shift, and go to state 15


State 14

    5 bloco: $@2 • parte_declara_vars $@3 comando_composto

    T_BEGIN   reduce using rule 9 (var)
    $default  reduce using rule 7 ($@4)

    parte_declara_vars  go to state 16
    var                 go to state 17
    $@4                 go to state 18


State 15

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $default  reduce using rule 2 (programa)


State 16

    5 bloco: $@2 parte_declara_vars • $@3 comando_composto

    $default  reduce using rule 4 ($@3)

    $@3  go to state 19


State 17

    6 parte_declara_vars: var •

    $default  reduce using rule 6 (parte_declara_vars)


State 18

    8 var: $@4 • VAR declara_vars

    VAR  shift, and go to state 20


State 19

    5 bloco: $@2 parte_declara_vars $@3 • comando_composto

    T_BEGIN  shift, and go to state 21

    comando_composto  go to state 22


State 20

    8 var: $@4 VAR • declara_vars

    $default  reduce using rule 12 ($@5)

    declara_vars  go to state 23
    declara_var   go to state 24
    $@5           go to state 25


State 21

   20 comando_composto: T_BEGIN • comandos T_END

    $default  reduce using rule 21 (comandos)

    comandos  go to state 26


State 22

    5 bloco: $@2 parte_declara_vars $@3 comando_composto •

    $default  reduce using rule 5 (bloco)


State 23

    8 var: $@4 VAR declara_vars •
   10 declara_vars: declara_vars • declara_var

    IDENT     reduce using rule 12 ($@5)
    $default  reduce using rule 8 (var)

    declara_var  go to state 27
    $@5          go to state 25


State 24

   11 declara_vars: declara_var •

    $default  reduce using rule 11 (declara_vars)


State 25

   14 declara_var: $@5 • lista_id_var DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA

    IDENT  shift, and go to state 28

    lista_id_var  go to state 29


State 26

   20 comando_composto: T_BEGIN comandos • T_END

    T_END  shift, and go to state 30


State 27

   10 declara_vars: declara_vars declara_var •

    $default  reduce using rule 10 (declara_vars)


State 28

   17 lista_id_var: IDENT •

    $default  reduce using rule 17 (lista_id_var)


State 29

   14 declara_var: $@5 lista_id_var • DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA
   16 lista_id_var: lista_id_var • VIRGULA IDENT

    VIRGULA      shift, and go to state 31
    DOIS_PONTOS  shift, and go to state 32


State 30

   20 comando_composto: T_BEGIN comandos T_END •

    $default  reduce using rule 20 (comando_composto)


State 31

   16 lista_id_var: lista_id_var VIRGULA • IDENT

    IDENT  shift, and go to state 33


State 32

   14 declara_var: $@5 lista_id_var DOIS_PONTOS • tipo $@6 PONTO_E_VIRGULA

    IDENT  shift, and go to state 34

    tipo  go to state 35


State 33

   16 lista_id_var: lista_id_var VIRGULA IDENT •

    $default  reduce using rule 16 (lista_id_var)


State 34

   15 tipo: IDENT •

    $default  reduce using rule 15 (tipo)


State 35

   14 declara_var: $@5 lista_id_var DOIS_PONTOS tipo • $@6 PONTO_E_VIRGULA

    $default  reduce using rule 13 ($@6)

    $@6  go to state 36


State 36

   14 declara_var: $@5 lista_id_var DOIS_PONTOS tipo $@6 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 37


State 37

   14 declara_var: $@5 lista_id_var DOIS_PONTOS tipo $@6 PONTO_E_VIRGULA •

    $default  reduce using rule 14 (declara_var)
